Add notifications, make search nagivate; show loading screen on submit
